<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_layout_type_01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.winequiz.Question_04">

    <TextView
        android:id="@+id/questionNumber_Layout_type_04"
        style="@style/TextViewStyle"
        android:text="@string/question_09" />

    <TextView
        android:id="@+id/questionText_Layout_type_04"
        style="@style/QuestionTextViewStyle"
        android:text="@string/question_09_text" />

    <TextView
        android:id="@+id/answer_Layout_type_04"
        style="@style/TextViewStyle"
        android:text="@string/chooseAnswer" />

    <RadioGroup
        android:id="@+id/allAnswers_Layout_type_04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/answerOptionA_Layout_type_04"
            style="@style/RadioButtonStyle_01"
            android:text="@string/question_09_answer_A" />

        <RadioButton
            android:id="@+id/answerOptionB_Layout_type_04"
            style="@style/RadioButtonStyle_01"
            android:text="@string/question_09_answer_B" />

        <RadioButton
            android:id="@+id/answerOptionC_Layout_type_04"
            style="@style/RadioButtonStyle_01"
            android:text="@string/question_09_answer_C" />

        <RadioButton
            android:id="@+id/answerOptionD_Layout_type_04"
            style="@style/RadioButtonStyle_01"
            android:text="@string/question_09_answer_D" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View style="@style/EmptyViewStyle" />

        <ImageView
            android:id="@+id/picture_Layout_type_04"
            style="@style/ImageStyle_02"
            android:background="@drawable/question_09_picture" />

        <View style="@style/EmptyViewStyle" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/goToStartButton_Layout_type_04"
            style="@style/ButtonStyle_01"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/space_between_textViews"
            android:onClick="goToStartOfApp"
            android:text="@string/buttonGoToStart" />

        <Button
            android:id="@+id/submitButton_Layout_type_04"
            style="@style/ButtonStyle_01"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/space_between_textViews"
            android:onClick="checkAnswer"
            android:text="@string/buttonTextSubmitAnswer" />

    </RelativeLayout>
</LinearLayout>

