<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/introductoryText"
        style="@style/TextViewStyle"
        android:text="@string/introductoryText" />

    <LinearLayout
        android:id="@+id/buttonsArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startQuizButton"
            style="@style/ButtonStyle_01"
            android:onClick="goToQuestionOne"
            android:text="@string/buttonTextStartQuiz" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></View>

        <Button
            android:id="@+id/closeAppButton"
            style="@style/ButtonStyle_01"
            android:onClick="closeApp"
            android:text="@string/closeApp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonsArea"
        android:layout_below="@id/introductoryText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_between_textViews"
                android:text="@string/readMoreText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resourceMaterials" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>