<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_layout_type_01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.winequiz.Question_03">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/questionNumber_Layout_type_02"
            style="@style/TextViewStyle"
            android:text="@string/question_03" />

        <TextView
            android:id="@+id/questionText_Layout_type_02"
            style="@style/QuestionTextViewStyle"
            android:text="@string/question_03_text" />

        <TextView
            android:id="@+id/answer_Layout_type_02"
            style="@style/TextViewStyle"
            android:text="@string/chooseAnswer_layout_02" />

        <EditText
            android:id="@+id/answerEntered_Layout_type_02"
            style="@style/TextAppearance.AppCompat"
            android:layout_width="@dimen/editTextLength"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorOfEditText"
            android:hint="@string/editTextHint_Q3"
            android:inputType="number"
            android:maxLength="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View style="@style/EmptyViewStyle" />

            <ImageView
                android:id="@+id/picture_Layout_type_02"
                style="@style/ImageStyle_01"
                android:background="@drawable/question_03_picture" />

            <View style="@style/EmptyViewStyle" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/goToStartButton_Layout_type_02"
                style="@style/ButtonStyle_01"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/space_between_textViews"
                android:onClick="goToStartOfApp"
                android:text="@string/buttonGoToStart" />

            <Button
                android:id="@+id/submitButton_Layout_type_02"
                style="@style/ButtonStyle_01"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/space_between_textViews"
                android:onClick="checkAnswer"
                android:text="@string/buttonTextSubmitAnswer" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>