<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.winequiz.MainActivity">

    <TextView
        style="@style/TextAppearance.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text_01"
        android:textSize="@dimen/font_size_of_mainScreen_text_02" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_between_textViews"
        android:text="@string/welcome_text_02" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/startPagePicture01"
            style="@style/ImageButtonStyle_01"
            android:background="@drawable/start_picture_01" />

        <ImageView
            android:id="@+id/startPagePicture02"
            style="@style/ImageButtonStyle_01"
            android:background="@drawable/start_picture_02" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_between_textViews"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="@dimen/answerButtonDimension_01"
            android:layout_height="@dimen/answerButtonDimension_01">

            <Button
                android:id="@+id/startQuizButton"
                style="@style/ButtonStyle_01"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/controlButtonMargin"
                android:onClick="goToQuestionOne"
                android:text="@string/buttonTextStartQuiz" />

            <Button
                android:id="@+id/readMoreButton"
                style="@style/ButtonStyle_01"
                android:layout_below="@+id/startQuizButton"
                android:layout_centerHorizontal="true"
                android:onClick="goToReadingMaterial"
                android:text="@string/buttonReadResources" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/startPagePicture03"
            style="@style/ImageButtonStyle_01"
            android:background="@drawable/start_picture_03" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_between_textViews"
        android:text="@string/welcome_text_03" />

    <TextView
        style="@style/TextAppearance.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_between_textViews"
        android:text="@string/welcome_text_04"
        android:textSize="@dimen/font_size_of_mainScreen_text_02" />

</LinearLayout>
